passing canvas tests on macos arm using a dedicated ARM binding factory