@@ -15,39 +15,35 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  *******************************************************************************/
-package panamagl.platform.macos;
+package panamagl.platform.macos.x86;
 
 import org.junit.Assert;
 import org.junit.Test;
-import panamagl.GLProfile;
-import panamagl.opengl.GL;
+import org.jzy3d.os.OperatingSystem;
+import panamagl.factory.PanamaGLFactory;
+import panamagl.platform.macos.MacOSx86Test;
+import panamagl.platform.macos.x86.PanamaGLFactory_macOS_x86;
 
-// VM ARGS : -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules
-// jdk.incubator.foreign
-// -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
-public class TestGLProfile_macOS extends MacOSTest{
-
+public class TestPanamaGLFactory_macOS_x86 extends MacOSx86Test{
   @Test
-  public void glProfile() {
+  public void test() {
     if (!checkPlatform())
       return;
-
-    // Given a GL caller
-    GL gl = new panamagl.platform.macos.x86.GL_macOS_x86();
-
-    // Given a GLUT context
-    GLUTContext_macOS glutContext = new GLUTContext_macOS();
-    glutContext.init(false);
-
-
-    GLProfile p = new GLProfile(gl);
-
-    Assert.assertNotNull(p.getVersion());
-    Assert.assertNotNull(p.getVendor());
-  }
-
   
+    PanamaGLFactory f = PanamaGLFactory.select();
+    
+    boolean matched = f instanceof PanamaGLFactory_macOS_x86;
+    
+    Assert.assertTrue(matched);
 
+    // Issue on context init
+    //Assert.assertNotNull(f.newGLContext());
 
+    Assert.assertNotNull(f.newGL());
+    Assert.assertNotNull(f.newOffscreenRenderer());
+    Assert.assertNotNull(f.newFBO(800, 600));
+    Assert.assertNotNull(f.newCanvasSwing());
 
+    ;
+  }
 }
